--- a/package.json
+++ b/package.json
@@ -3,20 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/googlemaps": "^3.30.7",
+    "@types/markerclustererplus": "^2.1.33",
+    "@types/react": "^16.0.38",
+    "googlemaps": "^1.12.0",
     "history": "^4.7.2",
+    "node-sass-chokidar": "0.0.3",
+    "npm": "^5.7.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-google-maps": "^9.4.5",
+    "react-responsive": "^4.0.4",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
     "recompose": "^0.26.0"
   },
   "scripts": {
+    "build-css": "node-sass-chokidar --include-path ./node_modules src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject", 
+    "eject": "react-scripts eject",
     "build-and-deploy": "npm run build && s3cmd sync build/* s3://top-city && echo 'Deployed!'"
   }
 }
